--- a/.github/workflows/credits-cache.yml
+++ b/.github/workflows/credits-cache.yml
@@ -25,6 +25,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4.1.5
       with:
+        github_token: ${{ secrets.PAT_ME }}
         ref: ${{ env.CACHE_BRANCH }}
         fetch-depth: 0
     - uses: actions/github-script@v7.0.1
