--- a/.github/workflows/credits-cache.yml
+++ b/.github/workflows/credits-cache.yml
@@ -15,6 +15,11 @@ env:
       41455508,
       41898282
     ]
+  MAINTAINERS: |
+    [
+      54110479,
+      21306782
+    ]
 
 jobs:
   build-cache:
@@ -67,6 +72,7 @@ jobs:
             const writeFileAsync = util.promisify(fs.writeFile)
 
             const blocklist = JSON.parse(process.env.BLOCKLIST)
+            const maintainers = JSON.parse(process.env.MAINTAINERS)
             const contributors = JSON.parse(process.env.getContributors)
             const names = JSON.parse(process.env.getNames)
 
@@ -75,20 +81,29 @@ jobs:
               blockedUsers[blocklist[i]] = true
             }
 
+            var maintainerUsers = {}
+            for (i = 0; i < maintainers.length; i++) {
+              maintainerUsers[maintainers[i]] = true
+            }
+
             var namedUsers = {}
             for (i = 0; i < names.length; i++) {
               namedUsers[names[i].id] = names[i].name
             }
 
-            var contributorMetadata = []
+            var contributorMetadata = {
+              "buildTime": Date.now() / 1000,
+              "contributorData": [],
+            }
             for (i = 0; i < contributors.length; i++) {
               const contributor = contributors[i]
 
               if (!blockedUsers[contributor.id]) {
-                contributorMetadata.push({
+                contributorMetadata.contributorData.push({
                   id: contributor.id,
                   name: namedUsers[contributor.node_id] ? namedUsers[contributor.node_id] : contributor.login,
                   login: contributor.login,
+                  maintainer: maintainerUsers[contributor.id] ? true : null
                 })
 
                 const avatarData = await fetch("https://avatars.githubusercontent.com/u/" + contributor.id, {
