I said keep it the same

--- a/.github/workflows/credits-cache.yml
+++ b/.github/workflows/credits-cache.yml
@@ -101,7 +101,7 @@ jobs:
 
               if (!blockedUsers[contributor.id]) {
                 contributorMetadata.push({
-                  id: contributor.id.toString(),
+                  id: contributor.id,
                   name: namedUsers[contributor.node_id] ? namedUsers[contributor.node_id] : contributor.login,
                   login: contributor.login,
                   maintainer: maintainerUsers[contributor.id] ? true : null
